# Elasticsearch-Keyword-Search

./: .gitignore  AGENTS.md  Dockerfile  README.md  create_data.py  pyproject.toml  requirements.txt
.github/workflows/: keepalive.yml
data/: sample_data.csv
src/: app.py  indexer.py
